new version  views/submit.ejs

--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -67,7 +67,7 @@
             <li><a href="#"><i class='bx bxs-dashboard'></i>Dashboard</a></li>
             <li><a href="#"><i class='bx bxs-face'></i>Manage Admin</a></li>
             <li><a href="#"><i class='bx bxs-factory'></i> Company</a></li>
-            <li><a href="http://localhost:3000/"><i class='bx bxs-user-plus'></i>New Employee</a></li>
+            <li><a href="http://localhost:3000/submit"><i class='bx bxs-user-plus'></i>New Employee</a></li>
             <li><a href="http://localhost:3000/manageemployee"><i class='bx bxs-user-plus'></i> Employee</a></li>
             <li><a href="http://localhost:3000/managedriver"><i class='bx bx-user'></i> Drivers</a></li>
             <li><a href="http://localhost:3000/submit-driver"><i class='bx bx-user'></i>New Drivers</a></li>
